# isaac_ros2_manager

./: README.md  package.xml  setup.cfg  setup.py
config/: integration_objectives.json
isaac_ros2_manager/: agent_bridge_node.py  auspex_compat.py  carter_odom_tf_node.py  cmd_vel_bridge_node.py  common.py  env_manager_node.py  objective_state_node.py  pose_odometry_bridge_node.py  startup_ready_node.py  team_manager_node.py  twist_relay_node.py  yolo_detection_adapter_node.py
launch/: isaac_env.launch.py  isaac_startup.launch.py  isaac_team.launch.py  isaac_yolo_detection.launch.py
