<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>isaac_ros2_manager</name>
  <version>0.1.0</version>
  <description>
    Isaac Sim helper utilities for the APE/Webots ROS contracts. The Isaac
    extension owns static scene spawn and the robot platform contract.
  </description>

  <maintainer email="prakash.jamakatel@yahoo.com">CHIP-GT</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>auspex_msgs</exec_depend>
  <exec_depend>ample_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>uav_ranger_manager</exec_depend>
  <exec_depend>ugv_ranger_manager</exec_depend>
  <exec_depend>webots_cmd</exec_depend>
  <exec_depend>webots_ros2_manager_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
